fix cart error purchases not showing

--- a/marketify/src/app/pages/register-login/register-login.component.scss
+++ b/marketify/src/app/pages/register-login/register-login.component.scss
@@ -27,6 +27,7 @@ form{
   font-family: 'Roboto', sans-serif;
   padding: 100px 0;
   transition: all .3s ease;
+  height: 100%;
 
   &:hover{
     background-color: #faf4ed;
